--- a/projects.css
+++ b/projects.css
@@ -15,7 +15,7 @@
   margin-bottom: 0;
 }
 
-#webgameshub__img {
+.website-image {
   box-sizing: border-box;
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
